使用nginx+fastdfs搭建图片服务器

--- a/BackEnd/wormhole/wormhole-service-consumer/pom.xml
+++ b/BackEnd/wormhole/wormhole-service-consumer/pom.xml
@@ -19,6 +19,12 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.github.tobato</groupId>
+            <artifactId>fastdfs-client</artifactId>
+            <version>1.26.5</version>
+        </dependency>
+
         <!--api依赖-->
         <dependency>
             <groupId>com.dcits.scott</groupId>
