--- a/BackEnd/wormhole/wormhole-service-consumer/src/main/resources/application.yml
+++ b/BackEnd/wormhole/wormhole-service-consumer/src/main/resources/application.yml
@@ -10,3 +10,15 @@ spring:
               max-active: 8
               max-wait: -1ms
 
+
+# 分布式文件系统FDFS配置
+fdfs:
+  soTimeout: 1500 #socket连接超时时长
+  connectTimeout: 600 #连接tracker服务器超时时长
+  reqHost: 192.168.81.128   #nginx访问地址
+  reqPort: 8888              #nginx访问端口
+  thumbImage: #缩略图生成参数，可选
+      width: 150
+      height: 150
+  trackerList: #TrackerList参数,支持多个，我这里只有一个，如果有多个在下方加- x.x.x.x:port
+      - 192.168.81.128:22122
