--- a/BackEnd/wormhole/wormhole-service-provider/solr-provider/pom.xml
+++ b/BackEnd/wormhole/wormhole-service-provider/solr-provider/pom.xml
@@ -20,6 +20,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.dcits.scott</groupId>
+            <artifactId>wormhole-common</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
