--- a/FrontEnd/wormhole_vue/merciqiao-vue-master/package.json
+++ b/FrontEnd/wormhole_vue/merciqiao-vue-master/package.json
@@ -20,12 +20,15 @@
     "echarts": "^4.6.0",
     "element-china-area-data": "^4.1.2",
     "element-ui": "^2.13.0",
+    "html2canvas": "^1.0.0-rc.5",
+    "jspdf": "^1.5.3",
     "live2d4vue": "^0.1.0",
     "mockjs": "^1.0.1-beta3",
     "moment": "^2.22.2",
     "vue": "^2.5.2",
     "vue-clipboard2": "^0.3.1",
     "vue-codemirror": "^4.0.6",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
     "vuex-persist": "^1.8.0"
   },
@@ -43,11 +46,12 @@
     "chalk": "^2.0.1",
     "compression-webpack-plugin": "^1.1.12",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "less-loader": "^5.0.0",
     "node-notifier": "^5.1.2",
     "node-sass": "^4.13.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
@@ -60,6 +64,9 @@
     "sass-loader": "^7.1.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "style-loader": "^1.1.3",
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
