--- a/BackEnd/wormhole/wormhole-service-consumer/pom.xml
+++ b/BackEnd/wormhole/wormhole-service-consumer/pom.xml
@@ -70,17 +70,17 @@
             <artifactId>shiro-spring</artifactId>
             <version>1.4.0</version>
         </dependency>
-        <dependency>
-            <groupId>org.apache.shiro</groupId>
-            <artifactId>shiro-ehcache</artifactId>
-            <version>1.4.0</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.apache.shiro</groupId>-->
+            <!--<artifactId>shiro-ehcache</artifactId>-->
+            <!--<version>1.4.0</version>-->
+        <!--</dependency>-->
 
         <!-- shiro+redis缓存插件 -->
         <dependency>
             <groupId>org.crazycake</groupId>
             <artifactId>shiro-redis</artifactId>
-            <version>2.4.2.1-RELEASE</version>
+            <version>3.1.0</version>
         </dependency>
 
         <!-- fastjson阿里巴巴jSON处理器 -->
